# connectedhomeip

./: ALL_DEVICES_README.md  ExampleAllDevices.ipynb
.github/workflows/: lint.yml
docs/: daily_pass_percentage.md
examples/: BUILD.gn
examples/all-devices-app/all-devices-common/: AppDataModel.cpp  AppDataModel.h  BUILD.gn
examples/all-devices-app/all-devices-common/cluster-impl/: BUILD.gn  access-control-cluster.cpp  access-control-cluster.h  boolean-state-cluster.h  bridged-device-basic-information-cluster.h  descriptor-cluster.cpp  descriptor-cluster.h  groups-cluster.h  identify-cluster.cpp  on-off-cluster.cpp  on-off-cluster.h  operational-credentials-cluster.cpp
examples/all-devices-app/all-devices-common/clusters/: BUILD.gn  access-control-cluster.cpp  access-control-cluster.h  boolean-state-cluster.cpp  bridged-device-basic-information-cluster.cpp  descriptor-cluster.cpp  descriptor-cluster.h  groups-cluster.cpp  groups-cluster.h  identify-cluster.h  occupancy-sensor-cluster.cpp  occupancy-sensor-cluster.h  on-off-cluster.cpp  on-off-cluster.h  operational-credentials-cluster.cpp
examples/all-devices-app/all-devices-common/devices/: AggregatorDevice.cpp  AggregatorDevice.h  BUILD.gn  BridgedNodeDevice.cpp  BridgedNodeDevice.h  ContactSensorDevice.cpp  ContactSensorDevice.h  Device.cpp  Device.h  Manager.cpp  Manager.h  OccupancySensorDevice.cpp  OccupancySensorDevice.h  OnOffDevice.cpp  OnOffDevice.h  OnOffLightDevice.cpp  OnOffLightDevice.h  RootNodeDevice.cpp  RootNodeDevice.h
examples/all-devices-app/all-devices-common/pwrpc/: BUILD.gn  BridgeService.cpp  BridgeService.h  README.md  Rpc.cpp  Rpc.h  TestService.cpp  TestService.h
examples/all-devices-app/all-devices-common/pwrpc/protos/: bridge_service.options  bridge_service.proto  test_service.options  test_service.proto
examples/all-devices-app/console/: BUILD.gn  setup.cfg
examples/all-devices-app/console/all_devices_rpc/: console.py
examples/all-devices-app/linux/: BUILD.gn  README.md  args.gni  main.cpp
examples/all-devices-app/tests/: BUILD.gn  TestAllDevicesApp.cpp
examples/any-device-app/: AppDataModel.cpp  AppDataModel.h  AppMain.cpp  AppMain.h  BUILD.gn  README.md
examples/any-device-app/legacy_to_be_removed/: BUILD.gn  any-device-app.matter
examples/any-device-app/linux/: BUILD.gn  main.cpp
examples/any-device-app/tests/: BUILD.gn  TestAnyDeviceAppViaMocks.cpp
examples/common/server-cluster-shim/: ServerClusterShim.cpp  ServerClusterShim.h
examples/contact-sensor-code-driven/: README.md
examples/contact-sensor-code-driven/cluster-impl/: BUILD.gn  identify-cluster.h
examples/contact-sensor-code-driven/device/: BUILD.gn  contact-sensor.cpp  contact-sensor.h  root-node.cpp  root-node.h
examples/contact-sensor-code-driven/linux/: BUILD.gn  args.gni  main.cpp
examples/contact-sensor-codedriven/contact-sensor-codedriven-common/cluster-impl/: BUILD.gn  descriptor-cluster.cpp  groups-cluster.cpp  occupancy-sensor-cluster.cpp  on-off-cluster.h
examples/contact-sensor-codedriven/contact-sensor-codedriven-common/devices/: BUILD.gn  ContactSensorDevice.cpp  ContactSensorDevice.h  Device.cpp  Device.h  Manager.cpp  Manager.h  RootNodeDevice.cpp  RootNodeDevice.h
examples/contact-sensor-codedriven/contact-sensor-codedriven-common/devices/base-device/: Device.cpp  Device.h
examples/contact-sensor-codedriven/contact-sensor-codedriven-common/devices/contact-sensor/: BUILD.gn  ContactSensorDevice.cpp  ContactSensorDevice.h
examples/contact-sensor-codedriven/contact-sensor-codedriven-common/devices/device-factory/: BUILD.gn
examples/contact-sensor-codedriven/contact-sensor-codedriven-common/devices/root-node/: BUILD.gn  RootNodeDevice.cpp  RootNodeDevice.h
examples/contact-sensor-codedriven/contact-sensor-codedriven-common/devices/water-leak-detector/: BUILD.gn  WaterLeakDetectorDevice.cpp  WaterLeakDetectorDevice.h
examples/contact-sensor-codedriven/linux/: BUILD.gn  README.md  main.cpp
examples/fabric-sync/admin/: DeviceManager.cpp
examples/platform/linux/: BUILD.gn
scripts/tools/zap/tests/outputs/all-clusters-app/app-templates/: endpoint_config.h
scripts/tools/zap/tests/outputs/lighting-app/app-templates/: endpoint_config.h
src/: BUILD.gn
src/app/clusters/descriptor/: CodegenIntegration.cpp  descriptor-cluster.cpp
src/app/clusters/general-commissioning-server/: BUILD.gn  general-commissioning-cluster.cpp  general-commissioning-cluster.h
src/app/clusters/network-commissioning/: BUILD.gn
src/app/common/templates/: config-data.yaml
src/app/data-model-provider/: MetadataTypes.h
src/app/server-cluster/: ServerClusterInterface.h
src/app/zap-templates/zcl/: zcl-with-test-extensions.json  zcl.json
src/data-model-providers/codedriven/: BUILD.gn  CodeDrivenDataModelProvider.cpp  CodeDrivenDataModelProvider.h  DynamicEndpointProvider.cpp  DynamicEndpointProvider.h  EndpointProviderInterface.h
src/data-model-providers/codedriven/endpoint/: SpanEndpoint.h
src/data-model-providers/codedriven/tests/: BUILD.gn  TestCodeDrivenDataModelProvider.cpp  TestCodeDrivenModelViaMocks.cpp
src/data-model-providers/codegen/: CodegenServerCluster.cpp  CodegenServerCluster.h
src/data-model-providers/codegen/tests/: BUILD.gn  TestCodeDrivenModelViaMocks.cpp  TestCodegenServerCluster.cpp
src/python_testing/: TC_DeviceConformance.py
zzz_generated/app-common/app-common/zap-generated/attributes/: Accessors.cpp  Accessors.h
