# Copyright (c) 2023 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")

import("${chip_root}/build/chip/tools.gni")
import("${chip_root}/src/app/common_flags.gni")

assert(chip_build_tools)

import("${chip_root}/examples/common/pigweed/pigweed_rpcs.gni")

config("includes") {
  include_dirs = [ "." ]
}

source_set("app-data-model") {
  sources = [
    "AppDataModel.cpp",
    "AppDataModel.h",
  ]

  include_dirs = [ "." ]

  deps = [
    "${chip_root}/src/app/data-model-provider",
    "${chip_root}/src/data-model-providers/codedriven:provider",

    # "${chip_root}/src/data-model-providers/codegen",  # Add dependency for
    #                                                   # CodegenServerCluster
  ]
}

config("app-main-public-includes") {
  include_dirs = [ "." ]  # Relative to this BUILD.gn file
}

source_set("app-main") {
  sources = [
    "AppMain.cpp",
    "AppMain.h",
  ]

  # This makes "." an include path for targets depending on "app-main"
  public_configs = [ ":app-main-public-includes" ]
  deps = [
    ":app-data-model",
    "${chip_root}/src/data-model-providers/codedriven:provider",
  ]
}

group("default") {
  deps = [ "linux:chip-any-device-app" ]
}
