import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

source_set("device") {
  sources = [
    "contact-sensor.cpp",
    "contact-sensor.h",
    "root-node.cpp",
    "root-node.h",
  ]

  public_deps = [
    "${chip_root}/examples/contact-sensor-code-driven/cluster-impl",
    "${chip_root}/src/app/clusters/administrator-commissioning-server",
    "${chip_root}/src/app/clusters/basic-information",
    "${chip_root}/src/app/clusters/boolean-state-server",
    "${chip_root}/src/app/clusters/descriptor",
    "${chip_root}/src/app/clusters/general-commissioning-server",
    "${chip_root}/src/app/clusters/general-diagnostics-server",
    "${chip_root}/src/app/clusters/group-key-mgmt-server",
    "${chip_root}/src/app/clusters/network-commissioning",
    "${chip_root}/src/app/clusters/software-diagnostics-server",
    "${chip_root}/src/app/clusters/wifi-network-diagnostics-server",
    "${chip_root}/src/data-model-providers/codedriven",
  ]

  public_configs = [ "${chip_root}/src:includes" ]
}
