# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# CHIPProjectConfig.h

import("//build_overrides/chip.gni")
import("//build_overrides/pigweed.gni")
import("${chip_root}/config/standalone/args.gni")

chip_device_project_config_include = "<CHIPProjectAppConfig.h>"
chip_project_config_include = "<CHIPProjectAppConfig.h>"
chip_system_project_config_include = "<SystemProjectConfig.h>"

chip_project_config_include_dirs =
    [ "${chip_root}/examples/contact-sensor-app/linux/include" ]
chip_project_config_include_dirs += [ "${chip_root}/config/standalone" ]
matter_enable_tracing_support = true

# Enable pigweed RPC: lots of pigweed dependencies, however we want our
# app to have this by default right now
pw_log_BACKEND = "${chip_root}/src/pw_backends/log"
pw_assert_BACKEND = "${chip_root}/src/pw_backends/assert"
pw_sys_io_BACKEND = "$dir_pw_sys_io_stdio"
pw_trace_BACKEND = "$dir_pw_trace_tokenized"
pw_unit_test_MAIN = "$dir_pw_unit_test:logging_main"
pw_rpc_system_server_BACKEND = "${chip_root}/config/linux/lib/pw_rpc:pw_rpc"
dir_pw_third_party_nanopb = "${chip_root}/third_party/nanopb/repo"
pw_chrono_SYSTEM_CLOCK_BACKEND = "$dir_pw_chrono_stl:system_clock"
pw_sync_MUTEX_BACKEND = "$dir_pw_sync_stl:mutex_backend"
pw_thread_YIELD_BACKEND = "$dir_pw_thread_stl:yield"
pw_thread_SLEEP_BACKEND = "$dir_pw_thread_stl:sleep"

pw_build_LINK_DEPS = [
  "$dir_pw_assert:impl",
  "$dir_pw_log:impl",
]

# This makes examples/platform/linux to set "PW_RPC_ENABLED" and that calls methods in
# pwrpc. TODO: coupling here is VERY high ... this is awkard...
chip_enable_pw_rpc = true

# We want a nice UI by default for now...
chip_examples_enable_imgui_ui = true
