import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

config("includes") {
  # allows includes like "clusters/..."
  include_dirs = [ ".." ]
}

source_set("descriptor") {
  sources = [
    "descriptor-cluster.cpp",
    "descriptor-cluster.h",
  ]

  public_deps = [
    "${chip_root}/src/app:attribute-access",
    "${chip_root}/src/app/data-model-provider:metadata",
    "${chip_root}/src/app/server-cluster",
    "${chip_root}/src/lib/core:error",
    "${chip_root}/src/lib/support",
    "${chip_root}/zzz_generated/app-common/clusters/Descriptor",
    "${chip_root}/src/app:interaction-model",
  ]

  public_configs = [
    ":includes",
    "${chip_root}/src:includes",
  ]
}

source_set("identify") {
  sources = [
    "identify-cluster.cpp",
    "identify-cluster.h",
  ]

  public_deps = [
    "${chip_root}/src/app:attribute-access",
    "${chip_root}/src/app/data-model-provider:metadata",
    "${chip_root}/src/app/server-cluster",
    "${chip_root}/src/lib/core:error",
    "${chip_root}/src/lib/support",
    "${chip_root}/zzz_generated/app-common/clusters/Identify",
  ]

  public_configs = [
    ":includes",
    "${chip_root}/src:includes",
  ]
}

source_set("bridged-device-basic-information") {
  sources = [
    "bridged-device-basic-information-cluster.cpp",
    "bridged-device-basic-information-cluster.h",
  ]

  public_deps = [
    "${chip_root}/src/app:attribute-access",
    "${chip_root}/src/app/data-model-provider:metadata",
    "${chip_root}/src/app/server-cluster",
    "${chip_root}/src/lib/core:error",
    "${chip_root}/src/lib/support",
    "${chip_root}/zzz_generated/app-common/clusters/BridgedDeviceBasicInformation",
  ]

  public_configs = [
    ":includes",
    "${chip_root}/src:includes",
  ]
}

source_set("occupancy-sensor") {
  sources = [
    "occupancy-sensor-cluster.cpp",
    "occupancy-sensor-cluster.h",
  ]

  public_deps = [
    "${chip_root}/src/app:attribute-access",
    "${chip_root}/src/app/data-model-provider:metadata",
    "${chip_root}/src/app/server-cluster",
    "${chip_root}/src/lib/core:error",
    "${chip_root}/src/lib/support",
    "${chip_root}/zzz_generated/app-common/clusters/OccupancySensing",
  ]

  public_configs = [
    ":includes",
    "${chip_root}/src:includes",
  ]
}

source_set("boolean-state-cluster") {
  sources = [
    "boolean-state-cluster.cpp",
    "boolean-state-cluster.h",
  ]

  public_deps = [
    "${chip_root}/src/app:attribute-access",
    "${chip_root}/src/app/data-model-provider:metadata",
    "${chip_root}/src/app/server-cluster",
    "${chip_root}/src/lib/core:error",
    "${chip_root}/src/lib/support",
    "${chip_root}/zzz_generated/app-common/clusters/OccupancySensing",
  ]

  public_configs = [
    ":includes",
    "${chip_root}/src:includes",
  ]
}

source_set("access-control-cluster") {
  sources = [
    "access-control-cluster.cpp",
    "access-control-cluster.h",
  ]

  defines = [
    "CHIP_CONFIG_USE_ACCESS_RESTRICTIONS=0",
  ]

  #deps = [
  #  "${chip_root}/src/app:attribute-access",
  #]

  public_deps = [
    #"${chip_root}/src/access:access_buildconfig",
    "${chip_root}/src/app/data-model-provider:metadata",
    "${chip_root}/src/app/server",
    "${chip_root}/src/app/server-cluster",
    "${chip_root}/src/lib/core:error",
    "${chip_root}/src/lib/support",
    "${chip_root}/zzz_generated/app-common/clusters/AccessControl",
  ]

  public_configs = [
    ":includes",
    "${chip_root}/src:includes",
  ]
}

source_set("operational-credentials-cluster") {
  sources = [
    "operational-credentials-cluster.cpp",
    "operational-credentials-cluster.h",
  ]

  public_deps = [
    "${chip_root}/src/app:attribute-access",
    "${chip_root}/src/app/data-model-provider:metadata",
    "${chip_root}/src/app/server",
    "${chip_root}/src/app/server-cluster",
    "${chip_root}/src/lib/core:error",
    "${chip_root}/src/lib/support",
    "${chip_root}/zzz_generated/app-common/clusters/OperationalCredentials",
  ]

  public_configs = [
    ":includes",
    "${chip_root}/src:includes",
  ]
}


group("clusters") {
  public_deps = [
    ":bridged-device-basic-information",
    ":descriptor",
    ":identify",
    ":occupancy-sensor",
    ":boolean-state-cluster",
    ":access-control-cluster",
    ":operational-credentials-cluster",
  ]
}
