import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

config("includes") {
  # allows includes like "devices/..."
  include_dirs = [ ".." ]
}

source_set("devices") {
  sources = [
    "Device.cpp",
    "Device.h",
    "Manager.cpp",
    "Manager.h",
    "OccupancySensorDevice.cpp",
    "OccupancySensorDevice.h",
  ]

  public_deps = [
    "${chip_root}/examples/all-devices-app/all-devices-common/clusters",
    "${chip_root}/src/data-model-providers/codedriven",
    "${chip_root}/src/lib/core:error",
    "${chip_root}/src/lib/support",
  ]

  public_configs = [
    ":includes",
    "${chip_root}/src:includes",
  ]
}
