import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

config("includes") {
  # allows includes like "devices/..."
  include_dirs = [ ".." ]
}

source_set("devices") {
  sources = [
    "AggregatorDevice.cpp",
    "AggregatorDevice.h",
    "BridgedNodeDevice.cpp",
    "BridgedNodeDevice.h",
    "ContactSensorDevice.cpp",
    "ContactSensorDevice.h",
    "Device.cpp",
    "Device.h",
    "Manager.cpp",
    "Manager.h",
    "OccupancySensorDevice.cpp",
    "OccupancySensorDevice.h",
    "OnOffDevice.cpp",
    "OnOffDevice.h",
  ]

  public_deps = [
    "${chip_root}/examples/all-devices-app/all-devices-common/cluster-impl",
    "${chip_root}/src/data-model-providers/codedriven",
    "${chip_root}/src/lib/core:error",
    "${chip_root}/src/lib/support",
    "${chip_root}/zzz_generated/app-common/clusters/Descriptor",
  ]

  public_configs = [
    ":includes",
    "${chip_root}/src:includes",
  ]
}
