import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

config("includes") {
  # allows includes like "devices/..."
  include_dirs = [ ".." ]
}

source_set("devices") {
  sources = [
    "ContactSensorDevice.cpp",
    "ContactSensorDevice.h",
    "Device.cpp",
    "Device.h",
    "RootNodeDevice.cpp",
    "RootNodeDevice.h",
  ]

  public_deps = [
    "${chip_root}/src/app/clusters/access-control-server",
    "${chip_root}/src/app/clusters/administrator-commissioning-server",
    "${chip_root}/src/app/clusters/basic-information",
    "${chip_root}/src/app/clusters/boolean-state-server",
    "${chip_root}/src/app/clusters/descriptor",
    "${chip_root}/src/app/clusters/identify-server",
    "${chip_root}/src/app/clusters/general-commissioning-server",
    "${chip_root}/src/app/clusters/general-diagnostics-server",
    "${chip_root}/src/app/clusters/group-key-mgmt-server",
    "${chip_root}/src/app/clusters/network-commissioning",
    "${chip_root}/src/app/clusters/operational-credentials-server",
    "${chip_root}/src/app/clusters/software-diagnostics-server",
    "${chip_root}/src/app/clusters/wifi-network-diagnostics-server",
    "${chip_root}/src/data-model-providers/codedriven",
    "${chip_root}/src/lib/core:error",
    "${chip_root}/src/lib/support",
    "${chip_root}/zzz_generated/app-common/clusters/Descriptor",
  ]

  public_configs = [
    ":includes",
    "${chip_root}/src:includes",
  ]
}
